--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -50,11 +50,15 @@
 	                <label class="form-label" for="typePasswordX">Password</label>
 	              </div>
 	              
+	              <div class="g-recaptcha" id="rcaptcha" data-callback="enableBtn" data-sitekey="6Le8kLseAAAAAIM74sw4c3npfdRXg6ihcn9sBgGP
+"></div>
+
+
+     			  <br/>
+	              
 	              <div th:if=${error} th:text="${error}" class="alert alert-danger"></div>
 	
-	              <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
-	
-				  	<button class="btn btn-outline-light btn-lg px-5" type="submit" >Login</button>
+				  	<button class="btn btn-outline-light btn-lg px-5" disabled="disabled" type="submit" id="button1">Login</button>
 			  </form>
               <div class="d-flex justify-content-center text-center mt-4 pt-1">
                 <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
@@ -88,5 +92,13 @@
 		src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
 		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 		crossorigin="anonymous"></script>
+	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+	<script>
+
+	function enableBtn(){
+		   document.getElementById("button1").disabled = false;
+		 }
+
+</script>
 </body>
 </html>
